--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.6.1",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "victory": "^31.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
