--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
+    "rumble-charts": "^2.0.0",
     "victory": "^31.0.0"
   },
   "scripts": {
